syntax = "proto3";

import "mars/serialize/protos/value.proto";


message FuseChunkDef {
    string key = 1;
    repeated uint32 index = 2 [packed = true];
    repeated int64 shape = 3;
    Value op = 4;  // just store key here
    bool cached = 5;
    Value chunk = 7;
    Value extra_params = 8;
    string id = 9;
}
