syntax = "proto3";

import "mars/serialize/protos/value.proto";


message OperandDef {
    string type = 1;
    string id = 2;
    map<string, Value> attr = 3;
}
